--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsc & node dist/index.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix --ext .tsx,.ts,.jsx,.js,.cjs,.mjs",
     "format": "prettier . --check",
@@ -18,18 +18,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.23.6",
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
+    "@jest/types": "^29.6.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
+    "babel-jest": "^29.7.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "husky": "8.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
-    "prettier": "3.1.1"
+    "prettier": "3.1.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
